ucs-school-lib (10.0.2-5) unstable; urgency=medium

  * move test data out of python module
  * reenable test mode

 -- Daniel Troeder <troeder@univention.de>  Mon, 11 Sep 2017 18:24:50 +0200

ucs-school-lib (10.0.2-4) unstable; urgency=low

  * Bug #45024: add support for changing path of hooks

 -- Daniel Troeder <troeder@univention.de>  Tue, 08 Aug 2017 07:34:05 +0200

ucs-school-lib (10.0.2-3) unstable; urgency=low

  * Bug #44225: move PyHook code to ucsschool.lib

 -- Daniel Troeder <troeder@univention.de>  Mon, 29 May 2017 13:47:05 +0200

ucs-school-lib (10.0.2-2) unstable; urgency=medium

  * Bug #44546: only catch ValueError

 -- Florian Best <best@univention.de>  Mon, 22 May 2017 14:24:07 +0200

ucs-school-lib (10.0.2-1) unstable; urgency=medium

  * Bug #44546: fix an error during removing users from school

 -- Florian Best <best@univention.de>  Fri, 05 May 2017 13:35:31 +0200

ucs-school-lib (10.0.1-3) unstable; urgency=medium

  * Bug #42408: fix typo when calling School.from_binddn()

 -- Florian Best <best@univention.de>  Tue, 14 Mar 2017 11:18:21 +0100

ucs-school-lib (10.0.1-2) unstable; urgency=low

  * Bug #43748: adapt ou-creation to new DHCP-options behavior

 -- Daniel Troeder <troeder@univention.de>  Fri, 10 Mar 2017 10:05:32 +0100

ucs-school-lib (10.0.1-1) unstable; urgency=medium

  * Bug #39379: psutil API change

 -- Florian Best <best@univention.de>  Fri, 17 Feb 2017 17:49:20 +0100

ucs-school-lib (10.0.0-1) unstable; urgency=low

  * Bug #43570: version bump for UCS@school 4.2

 -- Daniel Troeder <troeder@univention.de>  Fri, 17 Feb 2017 12:14:46 +0100

ucs-school-lib (9.0.31-1) unstable; urgency=low

  * support automatic removal of secondary schools from User objects,
    including removal of groups from removed school (Bug #41910)

 -- Daniel Troeder <troeder@univention.de>  Wed, 15 Feb 2017 09:33:21 +0100

ucs-school-lib (9.0.30-1) unstable; urgency=medium

  * Bug #42399: adjust text
