@@ -38,7 +38,7 @@ import subprocess
 import univention.debug as ud
 
 REGEX_LOCKED_FILES = re.compile(r'(?P<pid>[0-9]+)\s+(?P<uid>[0-9]+)\s+(?P<denyMode>[A-Z_]+)\s+(?P<access>[0-9x]+)\s+(?P<rw>[A-Z]+)\s+(?P<oplock>[A-Z_+]+)\s+(?P<sharePath>\S+)\s+(?P<filename>\S+)\s+(?P<time>.*)$')
-REGEX_USERS = re.compile(r'(?P<pid>[0-9]+)\s+(?P<username>\S+)\s+(?P<group>.+\S)\s+(?P<machine>\S+)\s+\(((?P<ipAddress>[0-9a-fA-F.:]+)|ipv4:(?P<ipv4Address>[0-9a-fA-F.:]+)|ipv6:(?P<ipv6Address>[0-9a-fA-F:]+))\)\s+(?P<version>\S+)\s+$')
+REGEX_USERS = re.compile(r'(?P<pid>[0-9]+)\s+(?P<username>\S+)\s+(?P<group>.+\S)\s+(?P<machine>\S+)\s+\(((?P<ipAddress>[0-9a-fA-F.:]+)|ipv4:(?P<ipv4Address>[0-9a-fA-F.:]+)|ipv6:(?P<ipv6Address>[0-9a-fA-F:]+))\)\s+(?P<version>\S+)\s*')
 REGEX_SERVICES = re.compile(r'(?P<service>\S+)\s+(?P<pid>[0-9]+)\s+(?P<machine>\S+)\s+(?P<connectedAt>.*)$')
 
 
@@ -142,8 +142,7 @@ class SMB_Status(list):
 
 		for process in self[:]:
 			if 'username' not in process:
-				ud.debug(ud.PARSER, ud.ERROR, 'Invalid SMB process definition')
-				ud.debug(ud.PARSER, ud.INFO, '%s' % ''.join(data))
+				ud.debug(ud.PARSER, ud.ERROR, 'Invalid SMB process definition (no "username"):\nprocess=%r\ndata=%s' % (process, ''.join(data)))
 				self.remove(process)
 
 	def update(self, service):
