@@ -1,5 +1,6 @@
 ucs-school-lib (10.0.2-5) unstable; urgency=medium
 
+  * Bug #43089: fix smbstatus parse regex
   * move test data out of python module
   * reenable test mode
 
